--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Launcher</string>
+    <string name="name_zhifa">Recoder</string>
+    <string name="name_ptt">PTT</string>
+    <string name="name_file_manager">FileM</string>
+    <string name="name_cards">Idcard</string>
+    <string name="name_phone">Phone</string>
+    <string name="name_settings">Settings</string>
+
     <string name="sosText">SOS</string>
     <string name="volteText">Volte</string>
     <string name="qqText">QQ</string>
